[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/GUI/InfoPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/GUI/Inventory.gd" type="Script" id=2]
[ext_resource path="res://Assets/GUI/coin-icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/xp-icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/sword-icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/shield-icon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/game_font.tres" type="DynamicFont" id=7]

[node name="Inventory" instance=ExtResource( 1 )]
rect_pivot_offset = Vector2( 2, 10 )
script = ExtResource( 2 )

[node name="Inventory" type="Control" parent="Background" index="1"]
margin_right = 128.0
margin_bottom = 92.0
mouse_filter = 2

[node name="InventoryLabel" type="Label" parent="Background/Inventory" index="0"]
margin_left = 16.0
margin_top = 13.0
margin_right = 110.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.92549, 0.596078, 0.0431373, 1 )
custom_fonts/font = ExtResource( 7 )
text = "inventory"
align = 1

[node name="LevelLabel" type="Label" parent="Background/Inventory" index="1"]
margin_left = 20.0
margin_top = 33.0
margin_right = 91.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.882353, 0.92549, 0.0431373, 1 )
custom_fonts/font = ExtResource( 7 )
text = "LVL 2 (34/600)"

[node name="GoldLabel" type="Label" parent="Background/Inventory" index="2"]
margin_left = 20.0
margin_top = 42.0
margin_right = 91.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.882353, 0.92549, 0.0431373, 1 )
custom_fonts/font = ExtResource( 7 )
text = "3526"

[node name="ArmorLabel" type="Label" parent="Background/Inventory" index="3"]
margin_left = 20.0
margin_top = 60.0
margin_right = 117.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.0431373, 0.745098, 0.92549, 1 )
custom_fonts/font = ExtResource( 7 )
text = "gold plate (-10DMG)"

[node name="WeaponLabel" type="Label" parent="Background/Inventory" index="4"]
margin_left = 20.0
margin_top = 51.0
margin_right = 126.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.92549, 0.286275, 0.0431373, 1 )
custom_fonts/font = ExtResource( 7 )
text = "longsword* (1d4)"

[node name="TextureRect" type="TextureRect" parent="Background/Inventory" index="5"]
margin_left = 10.0
margin_top = 35.0
margin_right = 17.0
margin_bottom = 42.0
texture = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="Background/Inventory" index="6"]
margin_left = 10.0
margin_top = 53.0
margin_right = 17.0
margin_bottom = 60.0
texture = ExtResource( 5 )

[node name="TextureRect3" type="TextureRect" parent="Background/Inventory" index="7"]
margin_left = 10.0
margin_top = 62.0
margin_right = 17.0
margin_bottom = 69.0
texture = ExtResource( 6 )

[node name="TextureRect4" type="TextureRect" parent="Background/Inventory" index="8"]
margin_left = 10.0
margin_top = 44.0
margin_right = 17.0
margin_bottom = 51.0
texture = ExtResource( 3 )
